--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,63 @@
 					</excludes>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.12</version>
+				<executions>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<rule>
+									<element>CLASS</element>
+									<limits>
+										<limit>
+											<counter>LINE</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.80</minimum>
+										</limit>
+										<limit>
+											<counter>BRANCH</counter>
+											<value>COVEREDRATIO</value>
+											<minimum>0.70</minimum>
+										</limit>
+									</limits>
+									<excludes>
+										<exclude>io/dougluciano/microservices/products/ProductsApplication.class</exclude>
+										<exclude>io/dougluciano/microservices/products/TestcontainersConfiguration.class</exclude>
+										<exclude>io/dougluciano/microservices/products/api/dto/*</exclude>
+										<exclude>io/dougluciano/microservices/products/api/view/*</exclude>
+										<exclude>io/dougluciano/microservices/products/enumerated/*</exclude>
+										<exclude>io/dougluciano/microservices/products/domain/model/*</exclude>
+										<exclude>io/dougluciano/microservices/products/domain/abstractions/*</exclude>
+										<exclude>io/dougluciano/microservices/products/api/mapper/ProductMapperImpl.class</exclude>
+									</excludes>
+								</rule>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
 		</plugins>
 	</build>
 
