--- a/compose.yaml
+++ b/compose.yaml
@@ -34,10 +34,41 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+  # [NOVO] Serviço do Prometheus para coletar as métricas
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      # Monta o arquivo de configuração do Prometheus no container
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - ecommerce-network
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+
+  # [NOVO] Serviço do Grafana para visualizar as métricas
+  grafana:
+    image: grafana/grafana-oss:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    volumes:
+      - grafana_data:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    networks:
+      - ecommerce-network
+    depends_on:
+      - prometheus
+
 
 # Define os volumes que podem ser usados pelos serviços.
 volumes:
   postgres_data:
+    driver: local
+  grafana_data:
     driver: local
 
 # Define as redes customizadas.
