--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=products
+server.address=0.0.0.0
+management.endpoints.web.exposure.include=health,prometheus
+server.tomcat.mbeanregistry.enabled=true
 
 # Spring configurations for database access
 spring.datasource.url=${DB_DRIVER}${DB_HOST}:${DB_PORT}/${DB_NAME}
